--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emotion/styled": "^11.13.0",
     "@fontsource/ibm-plex-serif": "^5.0.15",
     "@fontsource/roboto": "^5.0.15",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
     "@mui/styled-engine-sc": "^6.0.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
@@ -29,10 +31,11 @@
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
