--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
+    "target": "ES5",  // or higher, e.g., "ES6"
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
